# net_model_benchmark

./: .gitignore  CMakeLists.txt  readme.md  run_client.sh
example/client/: client_handle.c  client_handle.h  main.c
example/gen_numbers/: main.c
example/gen_orders/: main.c
example/server_channel/: listen_handle.c  listen_handle.h  main.c  server_context.c  server_context.h  upstream_handle.c  upstream_handle.h  user_context.c  user_context.h  worker_handle.c  worker_handle.h
example/server_multiplex/: listen_handle.c  listen_handle.h  main.c  worker_handle.c  worker_handle.h
example/upstream/: main.c  upstream_handle.c  upstream_handle.h
src/netmodel/: net_model_common.c  net_model_common.h  net_model_data.h  net_model_type.h
